@@ -10,7 +10,7 @@ MAP_SKIPPED_RECORDS.name=      Map skipped records
 COMBINE_INPUT_RECORDS.name=    Combine input records
 COMBINE_OUTPUT_RECORDS.name=   Combine output records
 REDUCE_INPUT_GROUPS.name=      Reduce input groups
-REDUCE_SHUFFLE_BYTES.name=	   Reduce shuffle bytes
+REDUCE_SHUFFLE_BYTES.name=     Reduce shuffle bytes
 REDUCE_INPUT_RECORDS.name=     Reduce input records
 REDUCE_OUTPUT_RECORDS.name=    Reduce output records
 REDUCE_SKIPPED_RECORDS.name=   Reduce skipped records
