@@ -281,6 +281,9 @@ Trunk (unreleased changes)
     HADOOP-5613. Change S3Exception to checked exception.
     (Andrew Hitchcock via tomwhite)
 
+    HADOOP-5717. Create public enum class for the Framework counters in 
+    org.apache.hadoop.mapreduce. (Amareshwari Sriramadasu via sharad)
+
   OPTIMIZATIONS
 
     HADOOP-5595. NameNode does not need to run a replicator to choose a
